live-js-added-to-refresh-browser-automatic--access-buttons-with-event-listener-not-working

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,7 @@
 <div id="container">
-  <h3>Tiko's playground</h3>
+  <h3>Tiko's programming playground</h3>
+  Hi, this is Timo, son and father still learning.<br>
+  I like programming, gardening and well.. Bayern Munich
   <div id="cloud"></div>
   <div id="yellowtail">Timo Körner</div>
 </div>
