repos-with-read-more-click--section-links

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <div id="container">
   <h3>Tiko's programming playground</h3>
-  Hi, this is Timo, son and father still learning.<br>
-  I like programming, gardening and well.. Bayern Munich
+  Hi, this is Timo, son and father learning and hopeful getting better.<br>
+  Likes programming, gardening and well.. Bayern Munich
   <div id="cloud"></div>
   <div id="yellowtail">Timo Körner</div>
 </div>
@@ -11,8 +11,8 @@
 <link href="css/style.css" rel="stylesheet">
 <link href="css/jstable.css" rel="stylesheet">
 
+<script src="js/live.js"></script>
 <script src="client.js"></script>
-<script src="js/cloud.js"></script>
 <script src="table.js"></script>
 <script src="index.js"></script>
 <script src="jstable.js"></script>
