--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,9 @@
 <div id="container">
   <h3>Tiko's programming playground</h3>
   Hi, this is Timo, son and father learning and hopeful getting better.<br>
-  Likes programming, gardening and well.. Bayern Munich
+  Likes programming, giving classes, gardening and well.. Bayern Munich
   <div id="cloud"></div>
-  <div id="yellowtail">Timo Körner</div>
+  <!-- <div id="yellowtail">Timo Körner</div> -->
 </div>
 <div id="bottomnav"></div>
 </div>
@@ -11,7 +11,7 @@
 <link href="css/style.css" rel="stylesheet">
 <link href="css/jstable.css" rel="stylesheet">
 
-<script src="js/live.js"></script>
+<!-- <script src="js/live.js"></script> -->
 <script src="client.js"></script>
 <script src="table.js"></script>
 <script src="index.js"></script>
