yout-tube-videos-embedded

--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,9 @@
 <div id="container">
-  <h3>Tiko's programming playground</h3>
-  Hi, this is Timo, son and father learning and hopeful getting better.<br>
-  Likes programming, giving classes, gardening and well.. Bayern Munich
-  <div id="cloud"></div>
+  <h3>Tiko's programming site</h3>
+  This is Timo, son and father; learning and hopeful getting better.<br>
+  Likes programming, gardening and .. Bayern Munich
+  <div id="cloud">
+  </div>
   <!-- <div id="yellowtail">Timo Körner</div> -->
 </div>
 <div id="bottomnav"></div>
@@ -10,8 +11,13 @@
 </body>
 <link href="css/style.css" rel="stylesheet">
 <link href="css/jstable.css" rel="stylesheet">
-
+<link href="//vjs.zencdn.net/8.3.0/video-js.min.css" rel="stylesheet">
+<link href="css/playlist.css" rel="stylesheet">
 <!-- <script src="js/live.js"></script> -->
+<script src="video.js"></script>
+<!-- <script src="node_modules/videojs-playlist/dist/videojs-playlist.min.js"></script> -->
+<script src="playlist-ui.js"></script>
+<script src='youtube.js'></script>
 <script src="client.js"></script>
 <script src="table.js"></script>
 <script src="index.js"></script>
