--- a/public/index.html
+++ b/public/index.html
@@ -2,22 +2,16 @@
   <h3>Tiko's programming site</h3>
   This is Timo, son and father; learning and hopeful getting better.<br>
   Likes programming, gardening and .. Bayern Munich
-  <div id="cloud">
-  </div>
-  <!-- <div id="yellowtail">Timo Körner</div> -->
+  <div id="cloud"></div>
+
+  <div id="yellowtail">Timo Körner</div>
 </div>
 <div id="bottomnav"></div>
 </div>
 </body>
 <link href="css/style.css" rel="stylesheet">
 <link href="css/jstable.css" rel="stylesheet">
-<link href="//vjs.zencdn.net/8.3.0/video-js.min.css" rel="stylesheet">
-<link href="css/playlist.css" rel="stylesheet">
 <!-- <script src="js/live.js"></script> -->
-<script src="video.js"></script>
-<!-- <script src="node_modules/videojs-playlist/dist/videojs-playlist.min.js"></script> -->
-<script src="playlist-ui.js"></script>
-<script src='youtube.js'></script>
 <script src="client.js"></script>
 <script src="table.js"></script>
 <script src="index.js"></script>
