lyrics-with-key-and-click-show-more-and-less--issues-not-working

--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
 <div id="container">
   <h3>Tiko's programming site</h3>
-  This is Timo, son and father; learning and hopeful getting better.<br>
-  Likes programming, gardening and .. Bayern Munich
-  <div id="cloud"></div>
+  This is Timo, son, father; always learning and hopeful getting better.<br>
+  Likes gardening, programming and .. Bayern Munich
+  <div id="content"></div>
 
   <div id="yellowtail">Timo Körner</div>
 </div>
